dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -41,51 +41,9 @@
   "console.components.api-key-modal.index.buttonMessage": "I have copied the key",
   "console.components.api-key-modal.index.grantedRights": "Granted rights",
   "console.components.api-key-modal.index.description": "Your API key has been created successfully.\nNote: After closing this window, the value of the key secret will not be accessible anymore.\nMake sure to copy and store it in a safe place now.",
-  "console.components.device-data-form.messages.abp": "Activation by personalization (ABP)",
-  "console.components.device-data-form.messages.activationMode": "Activation mode",
   "console.components.device-data-form.messages.activationSettings": "Activation settings",
-  "console.components.device-data-form.messages.appEUIDescription": "The AppEUI is a global application ID that uniquely identifies the owner of the end device",
-  "console.components.device-data-form.messages.appKeyDescription": "The root key to derive session keys to secure communication between the end device and the application",
-  "console.components.device-data-form.messages.appKeyNewDescription": "The root key to derive the application session key to secure communication between the end device and the application",
-  "console.components.device-data-form.messages.appSKeyDescription": "Application session key",
-  "console.components.device-data-form.messages.asServerID": "Application Server ID",
-  "console.components.device-data-form.messages.asServerIDDescription": "The AS-ID of the Application Server to use",
-  "console.components.device-data-form.messages.asServerKekLabel": "Application Server KEK label",
-  "console.components.device-data-form.messages.asServerKekLabelDescription": "The KEK label of the Application Server to use for wrapping the application session key",
   "console.components.device-data-form.messages.createDevice": "Create end device",
-  "console.components.device-data-form.messages.deviceAddrDescription": "Device address, issued by the Network Server or chosen by device manufacturer in case of testing range",
-  "console.components.device-data-form.messages.deleteDevice": "Delete end device",
-  "console.components.device-data-form.messages.deleteSuccess": "End device deleted",
-  "console.components.device-data-form.messages.deleteWarning": "Are you sure you want to delete \"{deviceId}\"? Deleting an end device cannot be undone!",
-  "console.components.device-data-form.messages.deviceDescDescription": "Optional device description; can also be used to save notes about the end device",
-  "console.components.device-data-form.messages.deviceDescPlaceholder": "Description for my new end device",
-  "console.components.device-data-form.messages.deviceEUIDescription": "The DevEUI is the unique identifier for this end device",
-  "console.components.device-data-form.messages.deviceIdPlaceholder": "my-new-device",
-  "console.components.device-data-form.messages.deviceNamePlaceholder": "My new end device",
-  "console.components.device-data-form.messages.external": "External",
-  "console.components.device-data-form.messages.externalJoinServer": "External Join Server",
-  "console.components.device-data-form.messages.fNwkSIntKeyDescription": "Forwarding network session integrity key",
-  "console.components.device-data-form.messages.homeNetID": "Home NetID",
-  "console.components.device-data-form.messages.homeNetIDDescription": "ID to identify the LoRaWAN network",
-  "console.components.device-data-form.messages.joinEUIDescription": "JoinEUI identifies the Join Server",
-  "console.components.device-data-form.messages.leaveBlankPlaceholder": "Leave blank to generate automatically",
   "console.components.device-data-form.messages.lorawanOptions": "LoRaWAN options",
-  "console.components.device-data-form.messages.lorawanVersionDescription": "The LoRaWAN MAC version of the end device",
-  "console.components.device-data-form.messages.lorawanPhyVersionDescription": "The LoRaWAN PHY version of the end device",
-  "console.components.device-data-form.messages.multicast": "Multicast",
-  "console.components.device-data-form.messages.nsServerKekLabel": "Network Server KEK label",
-  "console.components.device-data-form.messages.nsServerKekLabelDescription": "The KEK label of the Network Server to use for wrapping the network session key",
-  "console.components.device-data-form.messages.nwkSEncKeyDescription": "Network session encryption key",
-  "console.components.device-data-form.messages.nwkKeyDescription": "The root key to derive network session keys to secure communication between the end device and the network",
-  "console.components.device-data-form.messages.nwkSKeyDescription": "Network session key",
-  "console.components.device-data-form.messages.otaa": "Over the air activation (OTAA)",
-  "console.components.device-data-form.messages.resetsFCnt": "Resets frame counters",
-  "console.components.device-data-form.messages.resetsJoinNonces": "Resets join nonces",
-  "console.components.device-data-form.messages.resetWarning": "Reseting is insecure and makes your end device susceptible for replay attacks",
-  "console.components.device-data-form.messages.sNwkSIKeyDescription": "Serving network session integrity key",
-  "console.components.device-data-form.messages.supportsClassC": "Supports class C",
-  "console.components.device-data-form.messages.unexposed": "Unexposed",
-  "console.components.device-data-form.messages.updateSuccess": "End device updated",
   "console.components.device-import-form.index.fileImport": "File import",
   "console.components.device-import-form.index.file": "File",
   "console.components.device-import-form.index.formatInfo": "Format information",
@@ -394,6 +352,8 @@
   "lib.errors.status-code-messages.503": "Service unavailable",
   "lib.errors.status-code-messages.504": "Gateway timeout",
   "lib.errors.status-code-messages.520": "Unknown error",
+  "lib.shared-messages.abp": "Activation by personalization (ABP)",
+  "lib.shared-messages.activationMode": "Activation mode",
   "lib.shared-messages.add": "Add",
   "lib.shared-messages.addApiKey": "Add API key",
   "lib.shared-messages.addApplication": "Add application",
@@ -417,16 +377,24 @@
   "lib.shared-messages.apiKeyNamePlaceholder": "My new API key",
   "lib.shared-messages.apiKeys": "API keys",
   "lib.shared-messages.appEUI": "AppEUI",
+  "lib.shared-messages.appEUIDescription": "The AppEUI is a global application ID that uniquely identifies the owner of the end device",
   "lib.shared-messages.appId": "Application ID",
   "lib.shared-messages.appKey": "AppKey",
+  "lib.shared-messages.appKeyDescription": "The root key to derive session keys to secure communication between the end device and the application",
+  "lib.shared-messages.appKeyNewDescription": "The root key to derive the application session key to secure communication between the end device and the application",
   "lib.shared-messages.application": "Application",
   "lib.shared-messages.applications": "Applications",
   "lib.shared-messages.applicationServerAddress": "Application Server address",
   "lib.shared-messages.approve": "Approve",
   "lib.shared-messages.appSKey": "AppSKey",
+  "lib.shared-messages.appSKeyDescription": "Application session key",
+  "lib.shared-messages.asServerID": "Application Server ID",
+  "lib.shared-messages.asServerIDDescription": "The AS-ID of the Application Server to use",
+  "lib.shared-messages.asServerKekLabel": "Application Server KEK label",
+  "lib.shared-messages.asServerKekLabelDescription": "The KEK label of the Application Server to use for wrapping the application session key",
   "lib.shared-messages.attributeDescription": "Attributes can be used to set arbitrary information about the application, to be used by scripts, or simply for your own organization",
-  "lib.shared-messages.attributes": "Attributes",
   "lib.shared-messages.attributeKeyValidateTooShort": "Attribute keys must have at least 3 characters and contain no special characters",
+  "lib.shared-messages.attributes": "Attributes",
   "lib.shared-messages.attributesValidateRequired": "All attribute entry values are required. Please remove empty entries.",
   "lib.shared-messages.automaticUpdates": "Automatic updates",
   "lib.shared-messages.brand": "Brand",
@@ -434,9 +402,9 @@
   "lib.shared-messages.changeLocation": "Change location settings",
   "lib.shared-messages.changePassword": "Change password",
   "lib.shared-messages.channel": "Channel",
-  "lib.shared-messages.clear": "Clear",
-  "lib.shared-messages.claiming": "Claiming",
   "lib.shared-messages.claimAuthCode": "Claim authentication code",
+  "lib.shared-messages.claiming": "Claiming",
+  "lib.shared-messages.clear": "Clear",
   "lib.shared-messages.collaborator": "Collaborator",
   "lib.shared-messages.collaboratorCounted": "{count, plural, one {Collaborator} other {Collaborators}}",
   "lib.shared-messages.collaboratorDeleteSuccess": "Collaborator removed",
@@ -466,7 +434,13 @@
   "lib.shared-messages.devAddr": "Device address",
   "lib.shared-messages.devDesc": "End device description",
   "lib.shared-messages.devEUI": "DevEUI",
+  "lib.shared-messages.deviceAddrDescription": "Device address, issued by the Network Server or chosen by device manufacturer in case of testing range",
   "lib.shared-messages.deviceCounted": "{count, plural, one {End device} other {End devices}}",
+  "lib.shared-messages.deviceDescDescription": "Optional device description; can also be used to save notes about the end device",
+  "lib.shared-messages.deviceDescPlaceholder": "Description for my new end device",
+  "lib.shared-messages.deviceEUIDescription": "The DevEUI is the unique identifier for this end device",
+  "lib.shared-messages.deviceIdPlaceholder": "my-new-device",
+  "lib.shared-messages.deviceNamePlaceholder": "My new end device",
   "lib.shared-messages.devices": "End devices",
   "lib.shared-messages.devID": "End device ID",
   "lib.shared-messages.devName": "End device name",
@@ -488,11 +462,13 @@
   "lib.shared-messages.enabled": "Enabled",
   "lib.shared-messages.entityId": "Entity ID",
   "lib.shared-messages.eventsCannotShow": "Cannot show events",
+  "lib.shared-messages.external": "External",
+  "lib.shared-messages.externalJoinServer": "External Join Server",
   "lib.shared-messages.fetching": "Fetching data…",
   "lib.shared-messages.firmwareVersion": "Firmware version",
-  "lib.shared-messages.frequencyPlan": "Frequency plan",
   "lib.shared-messages.fNwkSIntKey": "FNwkSIntKey",
-  "lib.shared-messages.nwkSKey": "NwkSKey",
+  "lib.shared-messages.fNwkSIntKeyDescription": "Forwarding network session integrity key",
+  "lib.shared-messages.frequencyPlan": "Frequency plan",
   "lib.shared-messages.gatewayDescription": "Gateway description",
   "lib.shared-messages.gatewayEUI": "Gateway EUI",
   "lib.shared-messages.gatewayID": "Gateway ID",
@@ -508,12 +484,15 @@
   "lib.shared-messages.generalSettings": "General settings",
   "lib.shared-messages.hardware": "Hardware",
   "lib.shared-messages.hardwareVersion": "Hardware version",
+  "lib.shared-messages.homeNetID": "Home NetID",
+  "lib.shared-messages.homeNetIDDescription": "ID to identify the LoRaWAN network",
   "lib.shared-messages.id": "ID",
   "lib.shared-messages.import": "Import",
   "lib.shared-messages.importDevices": "Import end devices",
   "lib.shared-messages.integrations": "Integrations",
   "lib.shared-messages.joinAccept": "Join accept",
   "lib.shared-messages.joinEUI": "JoinEUI",
+  "lib.shared-messages.joinEUIDescription": "JoinEUI identifies the Join Server",
   "lib.shared-messages.joinServerAddress": "Join Server address",
   "lib.shared-messages.key": "key",
   "lib.shared-messages.keyEdit": "Edit API key",
@@ -531,12 +510,15 @@
   "lib.shared-messages.longitudeDesc": "The east-west position in degrees, where 0 is the prime meridian (Greenwich)",
   "lib.shared-messages.lorawanInformation": "LoRaWAN information",
   "lib.shared-messages.lorawanOptions": "LoRaWAN options",
+  "lib.shared-messages.lorawanPhyVersionDescription": "The LoRaWAN PHY version of the end device",
+  "lib.shared-messages.lorawanVersionDescription": "The LoRaWAN MAC version of the end device",
   "lib.shared-messages.macVersion": "LoRaWAN version",
   "lib.shared-messages.macVersionDescription": "The LoRaWAN version (MAC), as provided by the device manufacturer",
   "lib.shared-messages.messages": "Messages",
   "lib.shared-messages.messageTypes": "Message types",
   "lib.shared-messages.model": "Model",
   "lib.shared-messages.mqtt": "MQTT",
+  "lib.shared-messages.multicast": "Multicast",
   "lib.shared-messages.name": "Name",
   "lib.shared-messages.networkServerAddress": "Network Server address",
   "lib.shared-messages.noDesc": "This end device has no description",
@@ -549,19 +531,27 @@
   "lib.shared-messages.notSet": "Not set",
   "lib.shared-messages.nsAddress": "Network Server address",
   "lib.shared-messages.nsEmptyDefault": "Leave empty to link to the Network Server in the same cluster",
-  "lib.shared-messages.nwkSEncKey": "NwkSEncKey",
+  "lib.shared-messages.nsServerKekLabel": "Network Server KEK label",
+  "lib.shared-messages.nsServerKekLabelDescription": "The KEK label of the Network Server to use for wrapping the network session key",
   "lib.shared-messages.nwkKey": "NwkKey",
-  "lib.shared-messages.ok": "Ok",
+  "lib.shared-messages.nwkKeyDescription": "The root key to derive network session keys to secure communication between the end device and the network",
+  "lib.shared-messages.nwkSEncKey": "NwkSEncKey",
+  "lib.shared-messages.nwkSEncKeyDescription": "Network session encryption key",
+  "lib.shared-messages.nwkSKey": "NwkSKey",
+  "lib.shared-messages.nwkSKeyDescription": "Network session key",
   "lib.shared-messages.offline": "Offline",
+  "lib.shared-messages.ok": "Ok",
   "lib.shared-messages.online": "Online",
   "lib.shared-messages.options": "Options",
   "lib.shared-messages.organization": "Organization",
   "lib.shared-messages.organizationId": "Organization ID",
   "lib.shared-messages.organizations": "Organizations",
+  "lib.shared-messages.otaa": "Over the air activation (OTAA)",
   "lib.shared-messages.otherCluster": "Other cluster",
   "lib.shared-messages.overview": "Overview",
   "lib.shared-messages.password": "Password",
   "lib.shared-messages.pause": "Pause",
+  "lib.shared-messages.payload": "Payload",
   "lib.shared-messages.payloadFormatters": "Payload formatters",
   "lib.shared-messages.payloadFormattersDownlink": "Downlink payload formatters",
   "lib.shared-messages.payloadFormattersUpdateFailure": "There was an error updating the payload formatter",
@@ -569,7 +559,6 @@
   "lib.shared-messages.payloadFormattersUplink": "Uplink payload formatters",
   "lib.shared-messages.phyVersion": "Regional Parameters version",
   "lib.shared-messages.phyVersionDescription": "The Regional Parameters version (PHY), as provided by the device manufacturer",
-  "lib.shared-messages.payload": "Payload",
   "lib.shared-messages.port": "Port",
   "lib.shared-messages.privacyPolicy": "Privacy policy",
   "lib.shared-messages.provider": "Provider",
@@ -583,6 +572,9 @@
   "lib.shared-messages.refresh": "Refresh",
   "lib.shared-messages.refreshPage": "Refresh page",
   "lib.shared-messages.removeCollaborator": "Remove collaborator",
+  "lib.shared-messages.resetsFCnt": "Resets frame counters",
+  "lib.shared-messages.resetsJoinNonces": "Resets join nonces",
+  "lib.shared-messages.resetWarning": "Reseting is insecure and makes your end device susceptible for replay attacks",
   "lib.shared-messages.restartStream": "Restart stream",
   "lib.shared-messages.resume": "Resume",
   "lib.shared-messages.rights": "Rights",
@@ -591,6 +583,7 @@
   "lib.shared-messages.secure": "Secure",
   "lib.shared-messages.settings": "Settings",
   "lib.shared-messages.sNwkSIKey": "SNwkSIntKey",
+  "lib.shared-messages.sNwkSIKeyDescription": "Serving network session integrity key",
   "lib.shared-messages.stable": "Stable",
   "lib.shared-messages.state": "State",
   "lib.shared-messages.stateApproved": "Approved",
@@ -601,6 +594,7 @@
   "lib.shared-messages.status": "Status",
   "lib.shared-messages.statusUnknown": "Status unknown",
   "lib.shared-messages.success": "Success",
+  "lib.shared-messages.supportsClassC": "Supports class C",
   "lib.shared-messages.takeMeBack": "Take me back",
   "lib.shared-messages.termsAndCondition": "Terms and conditions",
   "lib.shared-messages.time": "Time",
@@ -611,6 +605,7 @@
   "lib.shared-messages.uplink": "Uplink",
   "lib.shared-messages.uplinkMessage": "Uplink message",
   "lib.shared-messages.uplinksReceived": "Uplinks received",
+  "lib.shared-messages.unexposed": "Unexposed",
   "lib.shared-messages.user": "User",
   "lib.shared-messages.userDelete": "Delete user",
   "lib.shared-messages.userEdit": "Edit user",
