util: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -63,6 +63,7 @@
   "console.components.downlink-form.index.scheduleDownlink": "Schedule Downlink",
   "console.components.downlink-form.index.downlinkSuccess": "Downlink was scheduled successfully",
   "console.components.downlink-form.index.payloadDescription": "The desired payload bytes of the downlink message",
+  "console.components.entity-title-section.index.lastSeenUnavailable": "Last seen info unavailable",
   "console.components.events-list.messages.frmPayload": "FRMPayload",
   "console.components.events-list.messages.devAddr": "DevAddr",
   "console.components.events-list.messages.fPort": "FPort",
@@ -450,6 +451,7 @@
   "lib.shared-messages.downlink": "Downlink",
   "lib.shared-messages.downlinkAck": "Downlink ack",
   "lib.shared-messages.downlinkFailed": "Downlink failed",
+  "lib.shared-messages.downlinkFrameCount": "Downlink frame count",
   "lib.shared-messages.downlinkNack": "Downlink Nack",
   "lib.shared-messages.downlinkPush": "Downlink push",
   "lib.shared-messages.downlinkQueued": "Downlink queued",
@@ -604,6 +606,7 @@
   "lib.shared-messages.unknown": "Unknown",
   "lib.shared-messages.updatedAt": "Last updated at",
   "lib.shared-messages.uplink": "Uplink",
+  "lib.shared-messages.uplinkFrameCount": "Uplink frame count",
   "lib.shared-messages.uplinkMessage": "Uplink message",
   "lib.shared-messages.uplinksReceived": "Uplinks received",
   "lib.shared-messages.unexposed": "Unexposed",
