--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -63,6 +63,7 @@
   "console.components.downlink-form.index.scheduleDownlink": "Xxxxxxxx Xxxxxxxx",
   "console.components.downlink-form.index.downlinkSuccess": "Xxxxxxxx xxx xxxxxxxxx xxxxxxxxxxxx",
   "console.components.downlink-form.index.payloadDescription": "Xxx xxxxxxx xxxxxxx xxxxx xx xxx xxxxxxxx xxxxxxx",
+  "console.components.entity-title-section.index.lastSeenUnavailable": "Xxxx xxxx xxxx xxxxxxxxxxx",
   "console.components.events-list.messages.frmPayload": "XXXXxxxxxx",
   "console.components.events-list.messages.devAddr": "XxxXxxx",
   "console.components.events-list.messages.fPort": "XXxxx",
@@ -450,6 +451,7 @@
   "lib.shared-messages.downlink": "Xxxxxxxx",
   "lib.shared-messages.downlinkAck": "Xxxxxxxx xxx",
   "lib.shared-messages.downlinkFailed": "Xxxxxxxx xxxxxx",
+  "lib.shared-messages.downlinkFrameCount": "Xxxxxxxx xxxxx xxxxx",
   "lib.shared-messages.downlinkNack": "Xxxxxxxx Xxxx",
   "lib.shared-messages.downlinkPush": "Xxxxxxxx xxxx",
   "lib.shared-messages.downlinkQueued": "Xxxxxxxx xxxxxx",
@@ -604,6 +606,7 @@
   "lib.shared-messages.unknown": "Xxxxxxx",
   "lib.shared-messages.updatedAt": "Xxxx xxxxxxx xx",
   "lib.shared-messages.uplink": "Xxxxxx",
+  "lib.shared-messages.uplinkFrameCount": "Xxxxxx xxxxx xxxxx",
   "lib.shared-messages.uplinkMessage": "Xxxxxx xxxxxxx",
   "lib.shared-messages.uplinksReceived": "Xxxxxxx xxxxxxxx",
   "lib.shared-messages.unexposed": "Xxxxxxxxx",
