dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -379,7 +379,8 @@
   "lib.shared-messages.apiKeyNamePlaceholder": "My new API key",
   "lib.shared-messages.apiKeys": "API keys",
   "lib.shared-messages.appEUI": "AppEUI",
-  "lib.shared-messages.appEUIDescription": "The AppEUI is a global application ID that uniquely identifies the owner of the end device",
+  "lib.shared-messages.appEUIJoinEUI": "AppEUI/JoinEUI",
+  "lib.shared-messages.appEUIDescription": "The AppEUI is a global application ID that uniquely identifies the owner of the end ­device. AppEUI is used for end devices with LoRaWAN versions 1.0.0-1.0.3, JoinEUI for 1.0.4+.",
   "lib.shared-messages.appId": "Application ID",
   "lib.shared-messages.appKey": "AppKey",
   "lib.shared-messages.appKeyDescription": "The root key to derive session keys to secure communication between the end device and the application",
@@ -495,7 +496,7 @@
   "lib.shared-messages.integrations": "Integrations",
   "lib.shared-messages.joinAccept": "Join accept",
   "lib.shared-messages.joinEUI": "JoinEUI",
-  "lib.shared-messages.joinEUIDescription": "JoinEUI identifies the Join Server",
+  "lib.shared-messages.joinEUIDescription": "JoinEUI identifies the Join Server. JoinEUI is used for end devices with LoRaWAN versions 1.0.4+, AppEUI for 1.0.0-1.0.3.",
   "lib.shared-messages.joinServerAddress": "Join Server address",
   "lib.shared-messages.key": "key",
   "lib.shared-messages.keyEdit": "Edit API key",
