--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -379,7 +379,8 @@
   "lib.shared-messages.apiKeyNamePlaceholder": "Xx xxx XXX xxx",
   "lib.shared-messages.apiKeys": "XXX xxxx",
   "lib.shared-messages.appEUI": "XxxXXX",
-  "lib.shared-messages.appEUIDescription": "Xxx XxxXXX xx x xxxxxx xxxxxxxxxxx XX xxxx xxxxxxxx xxxxxxxxxx xxx xxxxx xx xxx xxx xxxxxx",
+  "lib.shared-messages.appEUIJoinEUI": "XxxXXX/XxxxXXX",
+  "lib.shared-messages.appEUIDescription": "Xxx XxxXXX xx x xxxxxx xxxxxxxxxxx XX xxxx xxxxxxxx xxxxxxxxxx xxx xxxxx xx xxx xxx xxxxxxx. XxxXXX xx xxxx xxx xxx xxxxxxx xxxx XxXxXXX xxxxxxxx x.x.x-x.x.x, XxxxXXX xxx x.x.x+.",
   "lib.shared-messages.appId": "Xxxxxxxxxxx XX",
   "lib.shared-messages.appKey": "XxxXxx",
   "lib.shared-messages.appKeyDescription": "Xxx xxxx xxx xx xxxxxx xxxxxxx xxxx xx xxxxxx xxxxxxxxxxxxx xxxxxxx xxx xxx xxxxxx xxx xxx xxxxxxxxxxx",
@@ -495,7 +496,7 @@
   "lib.shared-messages.integrations": "Xxxxxxxxxxxx",
   "lib.shared-messages.joinAccept": "Xxxx xxxxxx",
   "lib.shared-messages.joinEUI": "XxxxXXX",
-  "lib.shared-messages.joinEUIDescription": "XxxxXXX xxxxxxxxxx xxx Xxxx Xxxxxx",
+  "lib.shared-messages.joinEUIDescription": "XxxxXXX xxxxxxxxxx xxx Xxxx Xxxxxx. XxxxXXX xx xxxx xxx xxx xxxxxxx xxxx XxXxXXX xxxxxxxx x.x.x+, XxxXXX xxx x.x.x-x.x.x.",
   "lib.shared-messages.joinServerAddress": "Xxxx Xxxxxx xxxxxxx",
   "lib.shared-messages.key": "xxx",
   "lib.shared-messages.keyEdit": "Xxxx XXX xxx",
