dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -32,6 +32,9 @@
   "components.status.index.bad": "bad",
   "components.status.index.mediocre": "mediocre",
   "components.status.index.unknown": "unknown",
+  "components.wizard.form.next-button.next": "Next",
+  "components.wizard.form.next-button.complete": "Complete",
+  "components.wizard.form.prev-button.prev": "Previous",
   "console.components.api-key-form.edit.deleteKey": "Delete key",
   "console.components.api-key-form.edit.modalWarning": "Are you sure you want to delete the {keyName} API key? Deleting an API key cannot be undone.",
   "console.components.api-key-form.edit.updateSuccess": "API key updated",
