dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -215,7 +215,6 @@
   "console.containers.device-template-format-select.index.title": "Format",
   "console.containers.device-template-format-select.index.warning": "End device template formats unavailable",
   "console.containers.device-title-section.device-title-section.lastSeenUnavailable": "Last seen info unavailable",
-  "console.containers.fetch-table.index.errorMessage": "There was an error and the list of {entity, select, applications {applications} organizations {organizations} keys {API keys} collaborators {collaborators} devices {end devices} gateways {gateways} users {users} webhooks {webhooks} other {entities}} could not be displayed",
   "console.containers.freq-plans-select.index.title": "Frequency plan",
   "console.containers.freq-plans-select.index.warning": "Frequency plans unavailable",
   "console.containers.freq-plans-select.index.description": "The frequency plan used by the end device",
@@ -402,6 +401,7 @@
   "console.views.overview.index.continueWorking": "Walk right through to your applications and/or gateways.",
   "console.views.overview.index.componentStatus": "Component status",
   "console.views.overview.index.versionInfo": "Version info",
+  "containers.fetch-table.index.errorMessage": "There was an error and the list of {entity, select, applications {applications} organizations {organizations} keys {API keys} collaborators {collaborators} devices {end devices} gateways {gateways} users {users} webhooks {webhooks} other {entities}} could not be displayed",
   "lib.components.init.initializing": "Initializing…",
   "lib.components.with-auth.errTooFewRights": "Your account does not possess sufficient rights to use the console.",
   "lib.components.with-auth.errTooFewRightsTitle": "Insufficient rights",
