--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -215,7 +215,6 @@
   "console.containers.device-template-format-select.index.title": "Xxxxxx",
   "console.containers.device-template-format-select.index.warning": "Xxx xxxxxx xxxxxxxx xxxxxxx xxxxxxxxxxx",
   "console.containers.device-title-section.device-title-section.lastSeenUnavailable": "Xxxx xxxx xxxx xxxxxxxxxxx",
-  "console.containers.fetch-table.index.errorMessage": "Xxxxx xxx xx xxxxx xxx xxx xxxx xx {entity, select, =applications {xxxxxxxxxxxx} =organizations {xxxxxxxxxxxxx} =keys {XXX xxxx} =collaborators {xxxxxxxxxxxxx} =devices {xxx xxxxxxx} =gateways {xxxxxxxx} =users {xxxxx} =webhooks {xxxxxxxx} other {xxxxxxxx}} xxxxx xxx xx xxxxxxxxx",
   "console.containers.freq-plans-select.index.title": "Xxxxxxxxx xxxx",
   "console.containers.freq-plans-select.index.warning": "Xxxxxxxxx xxxxx xxxxxxxxxxx",
   "console.containers.freq-plans-select.index.description": "Xxx xxxxxxxxx xxxx xxxx xx xxx xxx xxxxxx",
@@ -402,6 +401,7 @@
   "console.views.overview.index.continueWorking": "Xxxx xxxxx xxxxxxx xx xxxx xxxxxxxxxxxx xxx/xx xxxxxxxx.",
   "console.views.overview.index.componentStatus": "Xxxxxxxxx xxxxxx",
   "console.views.overview.index.versionInfo": "Xxxxxxx xxxx",
+  "containers.fetch-table.index.errorMessage": "Xxxxx xxx xx xxxxx xxx xxx xxxx xx {entity, select, =applications {xxxxxxxxxxxx} =organizations {xxxxxxxxxxxxx} =keys {XXX xxxx} =collaborators {xxxxxxxxxxxxx} =devices {xxx xxxxxxx} =gateways {xxxxxxxx} =users {xxxxx} =webhooks {xxxxxxxx} other {xxxxxxxx}} xxxxx xxx xx xxxxxxxxx",
   "lib.components.init.initializing": "Xxxxxxxxxxxxx",
   "lib.components.with-auth.errTooFewRights": "Xxxx xxxxxxx xxxx xxx xxxxxxx xxxxxxxxxx xxxxxx xx xxx xxx xxxxxxx.",
   "lib.components.with-auth.errTooFewRightsTitle": "Xxxxxxxxxxxx xxxxxx",
