console: Add component translations

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -424,11 +424,13 @@
   "lib.shared-messages.collaboratorRemove": "Collaborator remove",
   "lib.shared-messages.collaborators": "Collaborators",
   "lib.shared-messages.collaboratorUpdateSuccess": "Collaborator rights updated",
-  "lib.shared-messages.componentApplicationServer": "Application Server",
-  "lib.shared-messages.componentGatewayServer": "Gateway Server",
-  "lib.shared-messages.componentIdentityServer": "Identity Server",
-  "lib.shared-messages.componentJoinServer": "Join Server",
-  "lib.shared-messages.componentNetworkServer": "Network Server",
+  "lib.shared-messages.componentAs": "Application Server",
+  "lib.shared-messages.componentEdtc": "End Device Template Converter",
+  "lib.shared-messages.componentGs": "Gateway Server",
+  "lib.shared-messages.componentIs": "Identity Server",
+  "lib.shared-messages.componentJs": "Join Server",
+  "lib.shared-messages.componentNs": "Network Server",
+  "lib.shared-messages.componentQrg": "QR Code Generator",
   "lib.shared-messages.confirmPassword": "Confirm password",
   "lib.shared-messages.connected": "Connected",
   "lib.shared-messages.connecting": "Connecting",
