--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -424,11 +424,13 @@
   "lib.shared-messages.collaboratorRemove": "Xxxxxxxxxxxx xxxxxx",
   "lib.shared-messages.collaborators": "Xxxxxxxxxxxxx",
   "lib.shared-messages.collaboratorUpdateSuccess": "Xxxxxxxxxxxx xxxxxx xxxxxxx",
-  "lib.shared-messages.componentApplicationServer": "Xxxxxxxxxxx Xxxxxx",
-  "lib.shared-messages.componentGatewayServer": "Xxxxxxx Xxxxxx",
-  "lib.shared-messages.componentIdentityServer": "Xxxxxxxx Xxxxxx",
-  "lib.shared-messages.componentJoinServer": "Xxxx Xxxxxx",
-  "lib.shared-messages.componentNetworkServer": "Xxxxxxx Xxxxxx",
+  "lib.shared-messages.componentAs": "Xxxxxxxxxxx Xxxxxx",
+  "lib.shared-messages.componentEdtc": "Xxx Xxxxxx Xxxxxxxx Xxxxxxxxx",
+  "lib.shared-messages.componentGs": "Xxxxxxx Xxxxxx",
+  "lib.shared-messages.componentIs": "Xxxxxxxx Xxxxxx",
+  "lib.shared-messages.componentJs": "Xxxx Xxxxxx",
+  "lib.shared-messages.componentNs": "Xxxxxxx Xxxxxx",
+  "lib.shared-messages.componentQrg": "XX Xxxx Xxxxxxxxx",
   "lib.shared-messages.confirmPassword": "Xxxxxxx xxxxxxxx",
   "lib.shared-messages.connected": "Xxxxxxxxx",
   "lib.shared-messages.connecting": "Xxxxxxxxxx",
