--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -198,7 +198,7 @@
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Xxxxxxxx xxxxxxxxxxx",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "Xx xxxxxx",
   "console.containers.owners-select.owners-select.title": "Xxxxx",
-  "console.containers.owners-select.owners-select.warning": "Xxxx xxxxxxxxxxxx xxxxxxxxxxx",
+  "console.containers.owners-select.owners-select.warning": "Xxxxx xxx xx xxxxx xxx xxx xxxx xx xxxxxxxxxxxxx xxxxx xxx xx xxxxxxxxx",
   "console.containers.pubsub-formats-select.index.title": "Xxx/Xxx xxxxxx",
   "console.containers.pubsub-formats-select.index.warning": "Xxx/Xxx xxxxxxx xxxxxxxxxxx",
   "console.containers.pubsubs-table.index.format": "Xxxxxx",
