dev: Update locales

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -171,6 +171,7 @@
   "console.containers.api-keys-table.index.grantedRights": "Xxxxxxx Xxxxxx",
   "console.containers.application-payload-formatters.downlink.infoText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxxxx xxxxxxxx xx xxx xxx xxxxxxx xx xxxx xxxxxxxxxxx. Xxxx: xxx xxxxxx xxxxx xxxxxxx xxxxxxxxxx xxxx xxxxxxxxxx.",
   "console.containers.application-payload-formatters.uplink.infoText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxx xxxxxxxx xxxx xxx xxx xxxxxxx xx xxxx xxxxxxxxxxx. Xxxx: xxx xxxxxx xxxxx xxxxxxx xxxxxxxxxx xxxx xxxxxxxxxx.",
+  "console.containers.applications-table.index.ownedTabTitle": "Xxxxx xxxxxxxxxxxx",
   "console.containers.collaborators-table.index.id": "Xxxx / Xxxxxxxxxxxx XX",
   "console.containers.dev-addr-input.dev-addr-input.generate": "Xxxxxxxx xxx xxxxxx xxxxxxx",
   "console.containers.dev-addr-input.index.devAddrFetchingFailure": "Xxxxx xxx xx xxxxx xxx xxx xxx xxxxxx xxxxxxx xxxxx xxx xx xxxxxxxxx",
@@ -195,6 +196,7 @@
   "console.containers.gateway-location-form.gateway-location-form.locationSource": "Xxxxxxxx xxxxxx",
   "console.containers.gateway-location-form.gateway-location-form.privacy": "Xxxxxxx",
   "console.containers.gateway-location-form.gateway-location-form.publishLocation": "Xxxxxxx xxxxxxxx",
+  "console.containers.gateways-table.index.ownedTabTitle": "Xxxxx xxxxxxxx",
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Xxxxxxxx xxxxxxxxxxx",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "Xx xxxxxx",
   "console.containers.owners-select.owners-select.title": "Xxxxx",
@@ -376,6 +378,7 @@
   "lib.shared-messages.addWebhook": "Xxx xxxxxxx",
   "lib.shared-messages.admin": "Xxxxx",
   "lib.shared-messages.all": "Xxx",
+  "lib.shared-messages.allAdmin": "Xxx (Xxxxx)",
   "lib.shared-messages.altitude": "Xxxxxxxx",
   "lib.shared-messages.altitudeDesc": "Xxx xxxxxxxx xx xxxxxx, xxxxx x xxxxx xxx xxxxx",
   "lib.shared-messages.antennas": "Xxxxxxxx",
