--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -171,6 +171,7 @@
   "console.containers.api-keys-table.index.grantedRights": "Granted Rights",
   "console.containers.application-payload-formatters.downlink.infoText": "These payload formatters are executed on downlink messages to all end devices in this application. Note: end device level payload formatters have precedence.",
   "console.containers.application-payload-formatters.uplink.infoText": "These payload formatters are executed on uplink messages from all end devices in this application. Note: end device level payload formatters have precedence.",
+  "console.containers.applications-table.index.ownedTabTitle": "Owned applications",
   "console.containers.collaborators-table.index.id": "User / Organization ID",
   "console.containers.dev-addr-input.dev-addr-input.generate": "Generate end device address",
   "console.containers.dev-addr-input.index.devAddrFetchingFailure": "There was an error and the end device address could not be generated",
@@ -195,6 +196,7 @@
   "console.containers.gateway-location-form.gateway-location-form.locationSource": "Location source",
   "console.containers.gateway-location-form.gateway-location-form.privacy": "Privacy",
   "console.containers.gateway-location-form.gateway-location-form.publishLocation": "Publish location",
+  "console.containers.gateways-table.index.ownedTabTitle": "Owned gateways",
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Prefixes unavailable",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "No prefix",
   "console.containers.owners-select.owners-select.title": "Owner",
@@ -376,6 +378,7 @@
   "lib.shared-messages.addWebhook": "Add webhook",
   "lib.shared-messages.admin": "Admin",
   "lib.shared-messages.all": "All",
+  "lib.shared-messages.allAdmin": "All (Admin)",
   "lib.shared-messages.altitude": "Altitude",
   "lib.shared-messages.altitudeDesc": "The altitude in meters, where 0 means sea level",
   "lib.shared-messages.antennas": "Antennas",
