dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -16,6 +16,8 @@
   "components.file-input.index.remove": "Remove",
   "components.footer.index.footer": "You are the network. Let's build this thing together.",
   "components.footer.index.getSupport": "Get support",
+  "components.form.section.index.expand": "Expand section",
+  "components.form.section.index.collapse": "Collapse section",
   "components.input.generate.generate": "Generate",
   "components.key-value-map.entry.deleteEntry": "Delete entry",
   "components.key-value-map.index.addEntry": "Add entry",
@@ -394,6 +396,7 @@
   "lib.shared-messages.addressPlaceholder": "host",
   "lib.shared-messages.addWebhook": "Add webhook",
   "lib.shared-messages.admin": "Admin",
+  "lib.shared-messages.advancedSettings": "Advanced settings",
   "lib.shared-messages.all": "All",
   "lib.shared-messages.allAdmin": "All (Admin)",
   "lib.shared-messages.altitude": "Altitude",
@@ -609,6 +612,7 @@
   "lib.shared-messages.restartStream": "Restart stream",
   "lib.shared-messages.resume": "Resume",
   "lib.shared-messages.rights": "Rights",
+  "lib.shared-messages.rootKeys": "Root keys",
   "lib.shared-messages.saveChanges": "Save changes",
   "lib.shared-messages.searchById": "Search by ID",
   "lib.shared-messages.secure": "Secure",
