--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -16,6 +16,8 @@
   "components.file-input.index.remove": "Xxxxxx",
   "components.footer.index.footer": "Xxx xxx xxx xxxxxxx. Xxx'x xxxxx xxxx xxxxx xxxxxxxx.",
   "components.footer.index.getSupport": "Xxx xxxxxxx",
+  "components.form.section.index.expand": "Xxxxxx xxxxxxx",
+  "components.form.section.index.collapse": "Xxxxxxxx xxxxxxx",
   "components.input.generate.generate": "Xxxxxxxx",
   "components.key-value-map.entry.deleteEntry": "Xxxxxx xxxxx",
   "components.key-value-map.index.addEntry": "Xxx xxxxx",
@@ -394,6 +396,7 @@
   "lib.shared-messages.addressPlaceholder": "xxxx",
   "lib.shared-messages.addWebhook": "Xxx xxxxxxx",
   "lib.shared-messages.admin": "Xxxxx",
+  "lib.shared-messages.advancedSettings": "Xxxxxxxx xxxxxxxx",
   "lib.shared-messages.all": "Xxx",
   "lib.shared-messages.allAdmin": "Xxx (Xxxxx)",
   "lib.shared-messages.altitude": "Xxxxxxxx",
@@ -609,6 +612,7 @@
   "lib.shared-messages.restartStream": "Xxxxxxx xxxxxx",
   "lib.shared-messages.resume": "Xxxxxx",
   "lib.shared-messages.rights": "Xxxxxx",
+  "lib.shared-messages.rootKeys": "Xxxx xxxx",
   "lib.shared-messages.saveChanges": "Xxxx xxxxxxx",
   "lib.shared-messages.searchById": "Xxxxxx xx XX",
   "lib.shared-messages.secure": "Xxxxxx",
